Fixes on more AnimatedObjects

--- a/DequeLL.html
+++ b/DequeLL.html
@@ -28,7 +28,7 @@
 		<script type="module" src="AnimationLibrary/ObjectManager.js"></script>
 		<script type="module" src="AnimationLibrary/AnimationMain.js"></script>
 		<script
-			type="application/javascript"
+			type="module"
 			src="AnimationLibrary/AnimatedDoublyLinkedList.js"
 		></script>
 
