--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <!-- <link rel="stylesheet" href="visualPages.css" /> -->
-        <title>CS1332 Data Structures Visualizations</title>
+        <title>Data Structures Visualizations</title>
         <link rel="shortcut icon" href="favicon.ico" />
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
         <!-- Start Single Page Apps for GitHub Pages -->
